--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -6,11 +6,13 @@
   #primary {
     width: 50%;
     float: left;
+    padding-top: 5px;
   }
   
   #secondary {
     width: 40%;
     float: right;
+    padding-top: 5px;
   }
   
   /***********************
@@ -32,6 +34,10 @@
   .profile-photo {
     float: left;
     margin: 0 5% 80px 0;
+  }
+  
+  section {
+    padding-top: 150px;
   }
 }
 
@@ -66,7 +72,11 @@
   }
   
   header {
-    border-bottom: 5px solid #599a68;
+    border-bottom: 5px solid #A239CA;
     margin-bottom: 60px;
+  }
+  
+  section {
+    padding-top: 0;
   }
 }
